--- a/docker/docker-compose.1804.52.yaml
+++ b/docker/docker-compose.1804.52.yaml
@@ -6,7 +6,8 @@ services:
     image: swift-service-launcher:18.04-5.2
     build:
       args:
-        base_image: "swiftlang/swift:nightly-5.2-bionic"
+        ubuntu_version: "bionic"
+        swift_version: "5.2"
 
   test:
     image: swift-service-launcher:18.04-5.2
