--- a/docker/docker-compose.1604.51.yaml
+++ b/docker/docker-compose.1604.51.yaml
@@ -13,6 +13,7 @@ services:
     image: swift-service-launcher:16.04-5.1
     environment:
       - SANITIZER_ARG=--sanitize=thread
+      - SKIP_SIGNAL_TEST=true
 
   shell:
     image: swift-service-launcher:16.04-5.1
