setup shutdown hooks on ServiceLifecycle::startAndWait
motivation: fix startAndWait to work as advertised

changes:
* extract shutdown setup to a func and call it from both start and startAndWait
* add test
* fix api doc
* fixi jazzy xenial issue (fixes ci)

--- a/docker/docker-compose.1804.52.yaml
+++ b/docker/docker-compose.1804.52.yaml
@@ -11,6 +11,8 @@ services:
 
   test:
     image: swift-service-lifecycle:18.04-5.2
+    environment:
+      - SKIP_SIGNAL_TEST=true
 
   shell:
     image: swift-service-lifecycle:18.04-5.2
