--- a/docker/docker-compose.1804.53.yaml
+++ b/docker/docker-compose.1804.53.yaml
@@ -10,6 +10,8 @@ services:
 
   test:
     image: swift-service-lifecycle:18.04-5.3
+    environment:
+      - SKIP_SIGNAL_TEST=true
 
   shell:
     image: swift-service-lifecycle:18.04-5.3
