--- a/docker/docker-compose.1804.53.yaml
+++ b/docker/docker-compose.1804.53.yaml
@@ -6,7 +6,8 @@ services:
     image: swift-service-lifecycle:18.04-5.3
     build:
       args:
-        base_image: "swiftlang/swift:nightly-bionic"
+        ubuntu_version: "bionic"
+        swift_version: "5.3"
 
   test:
     image: swift-service-lifecycle:18.04-5.3
