--- a/docker/docker-compose.2004.55.yaml
+++ b/docker/docker-compose.2004.55.yaml
@@ -6,7 +6,7 @@ services:
     image: swift-service-lifecycle:20.04-5.5
     build:
       args:
-        base_image: "swiftlang/swift:nightly-.55-focal"
+        base_image: "swiftlang/swift:nightly-5.5-focal"
 
   test:
     image: swift-service-lifecycle:20.04-5.5
