--- a/docker/docker-compose.2004.55.yaml
+++ b/docker/docker-compose.2004.55.yaml
@@ -6,7 +6,8 @@ services:
     image: swift-service-lifecycle:20.04-5.5
     build:
       args:
-        base_image: "swiftlang/swift:nightly-5.5-focal"
+        ubuntu_version: "focal"
+        swift_version: "5.5"
 
   test:
     image: swift-service-lifecycle:20.04-5.5
