Fix CI for newer Swift versions

--- a/docker/docker-compose.2004.56.yaml
+++ b/docker/docker-compose.2004.56.yaml
@@ -13,6 +13,7 @@ services:
     image: swift-service-lifecycle:20.04-5.6
     environment:
       - SKIP_SIGNAL_TEST=true
+      - FORCE_TEST_DISCOVERY=--enable-test-discovery
 
   shell:
     image: swift-service-lifecycle:20.04-5.6
