--- a/docker/docker-compose.2004.57.yaml
+++ b/docker/docker-compose.2004.57.yaml
@@ -6,7 +6,8 @@ services:
     image: swift-service-lifecycle:20.04-5.7
     build:
       args:
-        base_image: "swiftlang/swift:nightly-main-focal"
+        ubuntu_version: "focal"
+        swift_version: "5.7"
 
   test:
     image: swift-service-lifecycle:20.04-5.7
