--- a/docker/docker-compose.2004.57.yaml
+++ b/docker/docker-compose.2004.57.yaml
@@ -13,7 +13,7 @@ services:
     image: swift-service-lifecycle:20.04-5.7
     environment:
       - SKIP_SIGNAL_TEST=true
-      - FORCE_TEST_DISCOVERY=--enable-test-discovery
+      #- FORCE_TEST_DISCOVERY=--enable-test-discovery
 
   shell:
     image: swift-service-lifecycle:20.04-5.7
